--- a/LearnUp/package.json
+++ b/LearnUp/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.17.0",
     "react-slick": "^0.29.0",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
