--- a/LearnUp/package.json
+++ b/LearnUp/package.json
@@ -28,6 +28,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "firebase-tools": "^12.9.1",
+    "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
   }
 }
